@@ -14,6 +14,8 @@ v0.0.6
  - Implement Utils#escape_html.
  - Hyde now always tries 'layouts/default.*' as the default layout, if none's
    specified. (TODO: layout: false)
+ - Implement Renderer.layoutable?, which dictates if a renderer is capable of
+   having a layout.
 
 v0.0.5 - 2010-05-30
 -------------------
